workshop/teams-management/teams-app/flux-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teams-ui
  labels:
    app: teams-ui
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teams-ui
  template:
    metadata:
      labels:
        app: teams-ui
        component: frontend
    spec:
      containers:
      - name: teams-ui
        image: olivercodes01/teams-app:0.0.7
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
