workshop/teams-management/teams-app/flux-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teams-ui-service
  labels:
    app: teams-ui
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: teams-ui
