workshop/teams-management/teams-app/flux-resources/teams-api-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: teams-api-service
spec:
  type: ExternalName
  externalName: teams-api-service.teams-api.svc.cluster.local
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
